Bug 184696 - Gadu-gadu has problems with contact list
Summary: Gadu-gadu has problems with contact list
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Gadu-Gadu Plugin (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 186113 188280 191730 192554 193637 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-17 19:31 UTC by Mieszko Ślusarczyk
Modified: 2009-09-19 09:58 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mieszko Ślusarczyk 2009-02-17 19:31:54 UTC
Version:           4.2.0 (using KDE 4.2.0)
OS:                Linux
Installed from:    Unspecified Linux

Every time I start kopete, when it connects to gadu, it adds about 20 contacts called "0", and one called "12156610," to my list. Deleting them causes kopete to crash. I don't know if it's related, but it also deletes contact list on server. Only merging those 20 "0" contacts into metacontact helps to clean my list a bit but deleting them is impossible (without crash):/
Comment 1 Mieszko Ślusarczyk 2009-02-17 19:47:36 UTC
I guess this must be some problem with contact autoex/importing from/to server.
Comment 2 km 2009-02-22 10:47:20 UTC
I confirm. I use Suse 11.1, kde 4.2 and the problem appeared after last update to kopete 4.2.0-62.1.
Comment 3 Mieszko Ślusarczyk 2009-03-25 17:46:32 UTC
This is probably caused by autosynchronisation of contactlist between server and client, so maybe somebody could tell me how to disable that feature?
Comment 4 Pino Toscano 2009-05-05 21:13:15 UTC
*** Bug 186113 has been marked as a duplicate of this bug. ***
Comment 5 Pino Toscano 2009-05-05 21:13:20 UTC
*** Bug 188280 has been marked as a duplicate of this bug. ***
Comment 6 Pino Toscano 2009-05-05 21:13:23 UTC
*** Bug 191730 has been marked as a duplicate of this bug. ***
Comment 7 Jack 2009-05-10 19:48:38 UTC
Same here, both with 3.5 and 4.2 versions.
Cleaning XML contact list by hand doesn't change anything, the bogus contacts are recreated on login again.
Comment 8 Pino Toscano 2009-05-13 11:05:08 UTC
*** Bug 192554 has been marked as a duplicate of this bug. ***
Comment 9 Maciej Warnecki 2009-05-13 15:57:34 UTC
Yep, I've got the same issue here. Also, Kopete often crashes after deleting the contacts.

opensuse 11.1 kde 4.2.3 qt45
Comment 10 Mieszko Ślusarczyk 2009-05-13 16:06:26 UTC
I'm using kde/kopete from svn trunk for a while, and after accidental deletion of my ~/.kde it works fine.
have any of you tried moving your .kde/share/apps/kopete somewhere else for a moment to test?
Comment 11 Maciej Warnecki 2009-05-13 16:11:06 UTC
I tried renaming .kde4/share/apps/kopete to .kde4/share/apps/kopete_old (when kopete was turned off) and then launched it. I logged into my account, and there was no contacts on my contact  list, but the moment I got logged 30 "0" accounts appeared and one "12293983" account.
Comment 12 Mieszko Ślusarczyk 2009-05-13 16:12:14 UTC
Then I guess fix is in trunk.
Comment 13 Maciej Warnecki 2009-05-13 16:53:23 UTC
I hope so. I built kopete from trunk, but got a bug where the "Configure" screen was empty. I hope the fix will in appear in the package for my distribution in a week or so.
Comment 14 shade 2009-05-22 11:42:48 UTC
We should start from that "0" is not a valid user. Its number used by gadu gadu to send comercial stuff to clients. It cant be handled by kopete and it should be blocked by gadu plugin in kopte by default. This will fix problem with 0 number adding to list.
Comment 15 Pino Toscano 2009-05-22 14:59:57 UTC
*** Bug 193637 has been marked as a duplicate of this bug. ***
Comment 16 Maciej Warnecki 2009-05-23 09:09:00 UTC
I am using opensuse 11.1 and 

'kde4-kopete-4.2.85-77.1.x86_64.rpm' 

package from 
'KDE:KDE4:Factory:Desktop/openSUSE_11.1' repo.

Now I'm using 

'kde4-kopete-4.2.3-1.4.x86_64.rpm' package 

from 'KDE:42/openSUSE_11.1' repo, 

and it works fine (no crashes or 0 contacts)
Comment 17 shade 2009-05-26 12:05:18 UTC
(In reply to comment #16)
> I am using opensuse 11.1 and 
> 
> 'kde4-kopete-4.2.85-77.1.x86_64.rpm' 
> 
> package from 
> 'KDE:KDE4:Factory:Desktop/openSUSE_11.1' repo.
> 
> Now I'm using 
> 
> 'kde4-kopete-4.2.3-1.4.x86_64.rpm' package 
> 
> from 'KDE:42/openSUSE_11.1' repo, 
> 
> and it works fine (no crashes or 0 contacts)

Cant confirm. I have kopete 0.70.2 and it crashes with gadu gadu all the time. Names arent usign national signs, and i had problem with removing gadu acount from acount list (kopte was crashing when i was trying to remove acount), another this is that when i removed gadu acount kopete remembers groups from kadu and wants to add contacts to this groups.
Distribution : gentoo
kde 4.24
kopete 0.70.2
package type: build from source
Comment 18 shade 2009-05-26 12:22:09 UTC
sory, mistyped kde version 4.2.3
Comment 19 Jack 2009-07-18 12:40:13 UTC
Update:

Confirm here, found a half-solution.
It seems that it is not import, but EXPORT that is creating problems.

1. Cleaning server contact list by web.gadugadu.pl, making sure the only contact left doesn't have any extra information (phone number especially).
2. Cleaning contactlist.xml to remove all bogus contacts.
3. Kopete starts much faster, no '0' or other bogus contacts, no problems.
4. So I try to export contacts back to server, works ok... and the problem starts all over again. web.gadugadu.pl shows only a handful of contacts, all phone-only, 90% of my contact list is not exported anyway.

So it would seem that extra information on contacts is creating this problem somewhere and it would appear export is at fault as well (or maybe only).

I'm going to have a look if it's just extra information or maybe national characters in fields.


Jack
Comment 20 km 2009-08-19 09:33:19 UTC
The bug sitll exists in KDE 4.3, release 152
Comment 21 Jakub Grandys 2009-09-09 18:32:07 UTC
I'm working on it, it seems that exporting in kopete is somehow messed up...
Comment 22 Matt Rogers 2009-09-12 05:52:28 UTC
SVN commit 1022576 by mattr:

Fix a bug with the parsing of the Gadu contact list

Patch by Jakub Grandys. Thanks!

CCBUG: 184696
This commit is for KDE 4.4. The backport for KDE 4.3 will close the bug.

 M  +8 -2      gaducontactlist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022576
Comment 23 Matt Rogers 2009-09-12 05:56:17 UTC
SVN commit 1022579 by mattr:

Fix a bug with the parsing of the Gadu contact list

Patch by Jakub Grandys. Thanks!

BUG: 184696
This is the backport for the KDE 4.3 branch.

 M  +8 -2      gaducontactlist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022579
Comment 24 shade 2009-09-14 10:48:06 UTC
@Matt does it fix problem with long user lists? I have about 100-150 contantsf rom gadu gadu (some are metacontacts with jids and msn ids) and when i start kopete it frezes for a minute. This is problem of kopete from kde 4.3 (0.70.90).
Comment 25 shade 2009-09-14 10:50:20 UTC
@Matt does it fix problem with long user lists? I have about 100-150 contacts from gadu gadu (some are metacontacts with jids and msn ids) and when i start kopete it frezes for a minute. This is problem of kopete from kde 4.3 (0.70.90).
Sory for repost, but numer of missing fonts, made my post unreadable.
Comment 26 Jakub Grandys 2009-09-14 11:02:46 UTC
@shade No, this is rather rught and temporary solution and deals with errors during importing (honestly it just ignores messedup list from server). I'm working currently on more mature solution to fix errors during import/export and also ability to disable importing contacts at startup, maybe this will help you if it gadu related. Unfortunately my gadu list is short so I don't have any lockups, my todo list is currently full so this will need to wait. In a day or two I'll finish proper-proper contact list fix it should speed up importing. As soon as new libgadu is released I will also try to remake gadu plugin to use it so there will be new gadu list format in xml.
Comment 27 shade 2009-09-15 23:31:59 UTC
Ok, so i have one thing more while doing things with user list, gadu gadu lets users to have your own number on contacts list, while kopete blocks it.
Comment 28 Matt Rogers 2009-09-19 06:10:23 UTC
SVN commit 1025561 by mattr:

Fixes to the Gadu Gadu Contact List Import and Export

Patch by Jakub Grandys! Thanks!
BUG: 184696
BUG: 204282
BUG: 204285

 M  +9 -0      kopete/kopete.notifyrc  
 M  +184 -33   protocols/gadu/gaduaccount.cpp  
 M  +14 -0     protocols/gadu/gaduaccount.h  
 M  +11 -9     protocols/gadu/gaducontactlist.cpp  
 M  +6 -1      protocols/gadu/gadueditaccount.cpp  
 M  +34 -8     protocols/gadu/gadusession.cpp  
 M  +4 -1      protocols/gadu/gadusession.h  
 M  +296 -462  protocols/gadu/ui/gadueditaccountui.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025561
Comment 29 Jakub Grandys 2009-09-19 09:58:26 UTC
@Matt, Thanks!

@shade, Sory I forgot about it, but will add it within next patch (fix for not showing you status to selected users, blocking users and searching pubdir). Could you please submit new bug or wish regarding it (and all known to you bugs)? This will help me to track all issues (unfortunately there are a lot of them), thanks.