Fix a bug with the parsing of the Gadu contact list

Patch by Jakub Grandys. Thanks!

BUG: 184696
This is the backport for the KDE 4.3 branch.

svn path=/branches/KDE/4.3/kdenetwork/kopete/; revision=1022579